--- a/src/css/home/service-offered.scss
+++ b/src/css/home/service-offered.scss
@@ -1,10 +1,5 @@
-@media only screen and (min-width: 992px) {
-	.service-offered-wrapper {
-		margin-left: 3em;
-	}
-}
 .service-offered-wrapper {
-	margin-top: 116px;
+	margin-top: 64px;
 
 	.service-offered-desc {
 		p:first-child {
@@ -19,7 +14,6 @@
 		  	text-align: center;
 		}
 		p:nth-child(2) {
-			width: 35%;
     		margin: 0 auto;
 			font-family: Proxima Nova Rg;
 			font-size: 17px;
@@ -30,6 +24,7 @@
 			letter-spacing: normal;
 			text-align: center;
 			color: #000000;
+			margin-bottom: 116px;
 		}
 
 		div {
@@ -41,12 +36,19 @@
 		}
 	}
 
+	.service-offered-list {
+		text-align: center;
+		img {
+			width: 70%;
+		}
+	}
+
 	.know-more-wrapper {
 		cursor: pointer;
-		margin-top: 3em;
+		margin-top: 4em;
 		div{
 			border-bottom: 2px solid #f7f7f7;
-			padding-bottom: 3em;
+			padding-bottom: 4em;
 			text-align: center;
 		}
 		span {
@@ -66,6 +68,82 @@
 		img {
 			width: 16px;
 			display: inline-block;
+		}
+	}
+}
+
+@media only screen and (max-width:600px) {
+	.service-offered-wrapper {
+		padding-right: 19px;
+    	padding-left: 19px;
+		.service-offered-desc {
+			p:first-child {
+				font-size: 22px;
+			}
+			p:nth-child(2) {
+				width: 100%;
+				font-size: 14px;
+				margin-bottom: 33px;
+			}
+		}
+	}
+}
+
+@media only screen and (min-width:600px) {
+	.service-offered-wrapper {
+		padding-right: 19px;
+    	padding-left: 19px;
+		.service-offered-desc {
+			p:first-child {
+				font-size: 22px;
+			}
+			p:nth-child(2) {
+				width: 80%;
+				font-size: 14px;
+				margin-bottom: 33px;
+			}
+		}
+	}
+}
+
+@media only screen and (min-width: 768px) {
+	.service-offered-wrapper {
+		.service-offered-desc {
+			p:first-child {
+				font-size: 36px;
+			}
+			p:nth-child(2) {
+				width: 82%;
+				font-size: 18.6px;
+			}
+		}
+	}
+}
+
+@media only screen and (min-width: 992px) {
+	.service-offered-wrapper {
+		margin-left:73px;
+		margin-right:73px;
+
+		.service-offered-desc {
+			p:nth-child(2) {
+				width: 74%;
+				font-size: 18.6px;
+			}
+		}
+	}
+}
+
+@media only screen and (min-width: 1200px) {
+	.service-offered-wrapper {
+		.service-offered-desc {
+			p:first-child {
+				font-size: 36px;
+			}
+			p:nth-child(2) {
+				width: 44%;
+				font-size: 17px;				
+			}
 		}
 	}
 }
