--- a/src/css/shopify/shopify.scss
+++ b/src/css/shopify/shopify.scss
@@ -2,7 +2,7 @@
  * ============================== */
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,700');
 
-*, *:before, *:after {
+/**, *:before, *:after {
     box-sizing: border-box;
 }
 
@@ -15,15 +15,14 @@ body {
     padding: 0;
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
-}
+}*/
 
 img {
-    display: block;
-    max-width: 100%;
-    max-height: 100%;
+    display: inline-block;
+    width: 100%;
 }
 
-h1 {
+/*h1 {
     font-weight: 300;
     margin: 0 0 15px;
     font-size: 3rem;
@@ -33,14 +32,10 @@ h2 {
     font-weight: 300;
     margin: 0;
     font-size: 2rem;
-}
+}*/
 
 /* BASE APP
  * ============================== */
-
-.App{
-    
-}
 
 .shopify-content{
     margin-top: 100px;
