--- a/src/css/home/home.scss
+++ b/src/css/home/home.scss
@@ -6,13 +6,16 @@
 	.home-content-detail {
 		background-color: #fff;
 	}
-}
 
-@media only screen and (max-width:600px){ 
-	.home-content-overview {
+	@media only screen and (max-width:600px){ 
 		background-color: #fff;
+		.home-content-detail {
+			
+		}
 	}
 }
+
+
 
 @media only screen and (min-width:768px){ 
 	.home-content-overview {
