--- a/src/css/home/studio-slideshow.scss
+++ b/src/css/home/studio-slideshow.scss
@@ -129,121 +129,282 @@
 		}	
 	}
 
-	.item.next .carousel-caption {
-	    opacity: 0;
-	}
+	.studio-slide-caption {
+		position: absolute;	
+		left: 10.6%;
+		top: 26.8%;
+		background-image: url('../../images/home/slideshow/caption-background.png');
+			background-size: 100%;
+			background-repeat: no-repeat;
 
-	.carousel-caption {
-	  transition: opacity .25s ease-in-out;
-	  -moz-transition: opacity .25s ease-in-out;
-	  -webkit-transition: opacity .25s ease-in-out;
-	}
+		p {
+			 font-family: Proxima Nova Rg;
+			 font-weight: normal;
+			 font-stretch: normal;
+			 font-style: normal;
+			 line-height: normal;
+			 letter-spacing: normal;
+			 color: #000000;
+			 text-align: left;
+			 margin-bottom: 0;
+			 font-weight: bold;
+			 opacity: 1;
+		}
 
-	.furniture-design-slide	{
-		position: absolute;
-    	top: 45.8%;
-    	left: 10.5%;
-    	font-family: Proxima Nova Rg;
-		font-size: 1.432vw;
-		font-weight: bold;
-		font-stretch: normal;
-		font-style: normal;
-		line-height: normal;
-		letter-spacing: normal;
-		color: #ed3232;
-		margin-top: 2.4em;
-		z-index: 10;
-		span {
-			margin-right: 8px;
+		p:first-child {
+			width: 9.3em;
+		}
+
+		p:nth-child(2) {
+			font-weight: normal;
+			width: 19em;
+		}
+
+		.design-type {
+			color: #fd2257;
+			font-weight: 600;
+			margin-top: 39px;
+			span:first-child {
+				margin-right: 4px;
+			}
 			img {
-				width: 1.041vw;
+				width: 3%;
+				margin-bottom: 4px;
 			}
-
-			@media only screen and (min-width: 768px) {
-				img {
-					margin-bottom: 2px;
-				}
-			}
-
-			@media only screen and (min-width: 1200px) {
-				img {
-					margin-bottom: 4px;
-				}
-			}
-		}
-	}
-
-	@media only screen and (min-width: 768px) {
-		.furniture-design-slide {
-			top: 36.8%;
-		}
-	}
-
-	@media only screen and (min-width: 992px) {
-		.furniture-design-slide {
-			top: 42.8%;
-		}
-	}
-
-	@media only screen and (min-width: 1200px) {
-		.furniture-design-slide {
-			top: 45.8%;
 		}
 	}
 
 	.mouse-pointer {
 		cursor: pointer;
 		position: absolute;
-	    top: 82%;
 	    z-index: 1;
 	    left: 50%;
-	    
-	}
-
-	@media only screen and (max-width: 600px) {
-		.mouse-pointer {
-			img {
-				display: none;
-			}
-		}
-	}
-
-	@media only screen and (min-width: 600px) {
-		.mouse-pointer {
-			img {
-				display: none;
-			}
-		}
-	}
-
-	@media only screen and (min-width: 768px) {
-		.mouse-pointer {
-			top: 69%;
-			img {
-				width: 18%;
-			}
-		}
-	}
-
-	@media only screen and (min-width: 992px) {
-		.mouse-pointer {
-			top: 76%;
-			img {
-		    	width: 21.8%;
-		    }
-		}
-	}
-
-	@media only screen and (min-width: 1200px) {
-		.mouse-pointer {
-			top: 80%;
-			img {
-		    	width: 30.8%;
-		    }
-		}
-	}
-
+    	bottom: 0;
+    	top: 92%;
+	}	
 }
 
+@media only screen and (max-width: 600px) {
+	.slide-show-wrapper {
+		.carousel-indicators {
+			display:none;
+		}
+		.mouse-pointer {
+			img {
+				display: none;
+			}
+		}
+	}
 
+	.studio-slide-caption {
+		margin-top: 18px;
+		padding-left: 17px;
+    	padding-right: 17px;
+		p {
+			 font-family: Proxima Nova Rg;
+			 font-weight: normal;
+			 font-stretch: normal;
+			 font-style: normal;
+			 line-height: normal;
+			 letter-spacing: normal;
+			 color: #000000;
+			 text-align: left;
+			 margin-bottom: 0;
+			 font-weight: bold;
+			 opacity: 1;
+		}
 
+		>p:first-child {
+			font-size: 22px;
+			width: 9.3em;
+		}
+
+		p:nth-child(2) {
+			font-size: 13px;
+			margin-top: 5px;
+			font-weight: normal;
+			width: 19em;
+		}
+		.slideshow-indicator{
+			span{
+				width: 11px;
+			    height: 11px;
+			    border-radius: 50%;
+			    display: inline-block;
+			    margin-right: 7px;
+			    margin-top: 17px;
+			}
+		}
+
+		.design-type{
+			color: #fd2257;
+			font-weight: 600;
+			margin-top: 32px;;
+			span:first-child {
+				font-size: 14px;
+				margin-right: 4px;
+			}
+			img {
+				width: 5%;
+				margin-bottom: 4px;
+			}
+		}
+
+	}
+}
+
+@media only screen and (min-width: 600px) {
+	.slide-show-wrapper {
+		.carousel-indicators {
+			display:none;
+		}
+		.mouse-pointer {
+			img {
+				display: none;
+			}
+		}
+	}
+
+	.studio-slide-caption {
+		margin-top: 18px;
+		padding-left: 17px;
+    	padding-right: 17px;
+		p {
+			 font-family: Proxima Nova Rg;
+			 font-weight: normal;
+			 font-stretch: normal;
+			 font-style: normal;
+			 line-height: normal;
+			 letter-spacing: normal;
+			 color: #000000;
+			 text-align: left;
+			 margin-bottom: 0;
+			 font-weight: bold;
+			 opacity: 1;
+		}
+
+		>p:first-child {
+			font-size: 22px;
+			width: 9.3em;
+		}
+
+		p:nth-child(2) {
+			font-size: 13px;
+			margin-top: 5px;
+			font-weight: normal;
+			width: 19em;
+		}
+		.slideshow-indicator{
+			span{
+				width: 11px;
+			    height: 11px;
+			    border-radius: 50%;
+			    display: inline-block;
+			    margin-right: 7px;
+			    margin-top: 17px;
+			}
+		}
+
+		.design-type{
+			color: #fd2257;
+			font-weight: 600;
+			margin-top: 32px;;
+			span:first-child {
+				font-size: 14px;
+				margin-right: 4px;
+			}
+			img {
+				width: 5%;
+				margin-bottom: 4px;
+			}
+		}
+
+	}
+}
+
+@media only screen and (min-width: 768px) {
+	.slide-show-wrapper {
+		.studio-slides {
+			.carousel-indicators {
+				left: -2.4%;
+	    		bottom: 3%;
+	    		display: flex;
+    			justify-content: end;
+			}
+
+			li {
+				width: 10px;
+				height: 11px;
+			}
+		}
+		.studio-slide-caption {
+			left: 10.6%;
+			top: 26.8%;
+
+			p:first-child {
+				font-size: 3.645vw;
+			}
+
+			p:nth-child(2) {
+				font-size: 1.432vw;
+			}
+
+			.design-type{
+				span:first-child{
+					font-size:17px;
+				}
+				font-size: 1.106vw;				
+			}
+		}
+		.mouse-pointer {
+			img {
+				width: 18%;
+				display:inline-block;
+			}
+		}
+	}
+}
+
+@media only screen and (min-width: 992px) {
+	.slide-show-wrapper {
+		.studio-slides {
+			.carousel-indicators {
+				left: -2.7%;
+	    		bottom: 13%;
+			}
+
+			li {
+				width: 11px;
+				height: 11px;
+			}
+		}
+		.mouse-pointer {
+			img {
+		    	width: 21.8%;
+		    	display: block;
+		    }
+		}
+	}
+}
+
+@media only screen and (min-width: 1200px) {
+	.slide-show-wrapper {
+		.studio-slides {
+			.carousel-indicators {
+				left: -3.4%;
+	    		bottom: 18%;
+
+	    		li {
+	    			width: 13px;
+		  			height: 15px;
+	    		}
+			}
+		}
+		.mouse-pointer {
+			img {
+		    	width: 30.8%;
+		    	display: block;
+		    }
+		}
+	}
+}
