--- a/src/css/home/one-stop-shop.scss
+++ b/src/css/home/one-stop-shop.scss
@@ -1,5 +1,6 @@
 .one-stop-shop-wrapper {
 	margin-top: 116px;
+	border-bottom: 2px solid #f7f7f7;
 	.one-stop-content {
 		> p{
 			font-family: Proxima Nova Rg;
@@ -38,7 +39,41 @@
 				letter-spacing: normal;
 				color: #000000;
 			}
-			.email-detail {
+
+			.email-details {
+				>div:first-child {
+					padding-right: 0;
+					input, input:focus {
+						border: none;
+						box-shadow: none;
+						font-size: 36px;
+						padding: 0;
+						border-bottom: 1px solid #979797;
+    					border-radius: 0;
+					}
+				}
+				
+
+				>div:nth-child(2) {
+					display: inline-flex;
+					padding: 0;
+					border-bottom: 1px solid #979797;
+					button, button:focus{
+						background-color: #fff;
+	    				border-color: #fff;
+	    				box-shadow: none;
+	    				padding: 0;
+	    				img {
+	    					width: 80%;
+						    display: inline-block;
+						    vertical-align: middle;
+	    				}
+					}
+				}
+
+				
+			}
+			/*.email-detail {
 				display: inline-block;				
 				input, input:focus{
 					padding-left: 0;
@@ -58,9 +93,9 @@
 					width: 87.4%;
     				margin-bottom: 12px;
 				}
-			}
+			}*/
 
-			@media only screen and (max-width: 600px) {
+			/*@media only screen and (max-width: 600px) {
 				.email-detail {
 					width: 79%;
 					input {
@@ -113,7 +148,7 @@
 					border-bottom: 1px solid #979797;
     				padding-bottom: 10.5px;
 				}
-			}
+			}*/
 		}
 }
 
@@ -148,6 +183,15 @@
     		.meeting-detail-desc{
     			font-size: 18px;
     		}
+
+    		.email-details {
+				>div:first-child {
+					padding-right: 0;
+					input, input:focus {
+						font-size: 18px;
+					}	
+				}
+			}
     	}
 	}
 }
