--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -17,6 +17,8 @@
 
 @import './navigation-bar/navigation.scss';
 @import './navigation-bar/drawer.scss';
+@import './navigation-bar/navigation-header.scss';
+@import './navigation-bar/navigation-footer.scss';
 
 @import './shopify/shopify.scss';
 
