--- a/src/css/navigation-bar/navigation-header.scss
+++ b/src/css/navigation-bar/navigation-header.scss
@@ -1,12 +1,12 @@
 .studio-navheader-wrapper {
 	background-color: #f6f6f6;
+	box-shadow: 2px 2px 4px 0 rgba(0, 0, 0, 0.22);
 
 	.image-links-list{
 		.navbar {
-			padding-top: 0;
 			padding-right: 0;
 			.nav-images-list {
-				width: 75%;
+				width: 66%;
 				.nav-images {
 					padding-top: 0;										
 				}
