--- a/src/css/home/blog.scss
+++ b/src/css/home/blog.scss
@@ -161,6 +161,9 @@
 							font-size:18.6px;
 						}
 						
+						p:nth-child(2),p:nth-child(3) {
+							font-size: 15px;
+						}
 					}
 				}
 			}
@@ -175,12 +178,19 @@
 				font-size:17px;
 			}
 		}
-		.blog-images-wrapper{
-			.blog-image-caption{
-				p:first-child{
-					font-size:24px;
-				}
+		.blog-images-wrapper {
+			.blog-list{
+				.blog-image {
+					.blog-image-caption{
+						p:first-child{
+							font-size:24px;
+						}
 
+						p:nth-child(2),p:nth-child(3) {
+							font-size: 17px;
+						}
+					}
+				}
 			}
 		}		
 	}
@@ -191,11 +201,17 @@
 		margin-left:73px;
 		margin-right:73px;
 		.blog-images-wrapper{
-			.blog-image-caption{
-				p:first-child{
-					font-size:36px;
+			.blog-list{
+				.blog-image {
+					.blog-image-caption{
+						p:first-child{
+							font-size:30px;
+						}
+						p:nth-child(2),p:nth-child(3) {
+							font-size: 17px;
+						}
+					}
 				}
-
 			}
 		}		
 
