--- a/src/css/home/studio-slideshow.scss
+++ b/src/css/home/studio-slideshow.scss
@@ -161,7 +161,7 @@
 		}
 
 		.design-type {
-			color: #fd2257;
+			color: #e53532;
 			font-weight: 600;
 			margin-top: 39px;
 			span:first-child {
@@ -185,226 +185,247 @@
 }
 
 @media only screen and (max-width: 600px) {
-	.slide-show-wrapper {
-		.carousel-indicators {
-			display:none;
-		}
-		.mouse-pointer {
-			img {
-				display: none;
-			}
-		}
-	}
-
-	.studio-slide-caption {
-		margin-top: 18px;
-		padding-left: 17px;
-    	padding-right: 17px;
-		p {
-			 font-family: Proxima Nova Rg;
-			 font-weight: normal;
-			 font-stretch: normal;
-			 font-style: normal;
-			 line-height: normal;
-			 letter-spacing: normal;
-			 color: #000000;
-			 text-align: left;
-			 margin-bottom: 0;
-			 font-weight: bold;
-			 opacity: 1;
-		}
-
-		>p:first-child {
-			font-size: 22px;
-			width: 9.3em;
-		}
-
-		p:nth-child(2) {
-			font-size: 13px;
-			margin-top: 5px;
-			font-weight: normal;
-			width: 19em;
-		}
-		.slideshow-indicator{
-			span{
-				width: 11px;
-			    height: 11px;
-			    border-radius: 50%;
-			    display: inline-block;
-			    margin-right: 7px;
-			    margin-top: 17px;
-			}
-		}
-
-		.design-type{
-			color: #fd2257;
-			font-weight: 600;
-			margin-top: 32px;;
-			span:first-child {
-				font-size: 14px;
-				margin-right: 4px;
-			}
-			img {
-				width: 5%;
-				margin-bottom: 4px;
-			}
-		}
-
-	}
-}
-
-@media only screen and (min-width: 600px) {
-	.slide-show-wrapper {
-		.carousel-indicators {
-			display:none;
-		}
-		.mouse-pointer {
-			img {
-				display: none;
-			}
-		}
-	}
-
-	.studio-slide-caption {
-		margin-top: 18px;
-		padding-left: 17px;
-    	padding-right: 17px;
-		p {
-			 font-family: Proxima Nova Rg;
-			 font-weight: normal;
-			 font-stretch: normal;
-			 font-style: normal;
-			 line-height: normal;
-			 letter-spacing: normal;
-			 color: #000000;
-			 text-align: left;
-			 margin-bottom: 0;
-			 font-weight: bold;
-			 opacity: 1;
-		}
-
-		>p:first-child {
-			font-size: 22px;
-			width: 9.3em;
-		}
-
-		p:nth-child(2) {
-			font-size: 13px;
-			margin-top: 5px;
-			font-weight: normal;
-			width: 19em;
-		}
-		.slideshow-indicator{
-			span{
-				width: 11px;
-			    height: 11px;
-			    border-radius: 50%;
-			    display: inline-block;
-			    margin-right: 7px;
-			    margin-top: 17px;
-			}
-		}
-
-		.design-type{
-			color: #fd2257;
-			font-weight: 600;
-			margin-top: 32px;;
-			span:first-child {
-				font-size: 14px;
-				margin-right: 4px;
-			}
-			img {
-				width: 5%;
-				margin-bottom: 4px;
-			}
-		}
-
-	}
-}
-
-@media only screen and (min-width: 768px) {
-	.slide-show-wrapper {
-		.studio-slides {
+	.slideshow-container {
+		border-bottom: 2px solid #f7f7f7;
+		padding-bottom: 64px;
+		.slide-show-wrapper {
 			.carousel-indicators {
-				left: -2.4%;
-	    		bottom: 3%;
-	    		display: flex;
-    			justify-content: end;
+				display:none;
 			}
-
-			li {
-				width: 10px;
-				height: 11px;
+			.mouse-pointer {
+				img {
+					display: none;
+				}
 			}
 		}
-		.studio-slide-caption {
-			left: 10.6%;
-			top: 26.8%;
 
-			p:first-child {
-				font-size: 3.645vw;
+		.studio-slide-caption {
+			margin-top: 18px;
+			padding-left: 17px;
+	    	padding-right: 17px;
+			p {
+				 font-family: Proxima Nova Rg;
+				 font-weight: normal;
+				 font-stretch: normal;
+				 font-style: normal;
+				 line-height: normal;
+				 letter-spacing: normal;
+				 color: #000000;
+				 text-align: left;
+				 margin-bottom: 0;
+				 font-weight: bold;
+				 opacity: 1;
+			}
+
+			>p:first-child {
+				font-size: 22px;
+				width: 9.3em;
 			}
 
 			p:nth-child(2) {
-				font-size: 1.432vw;
+				font-size: 13px;
+				margin-top: 5px;
+				font-weight: normal;
+				width: 19em;
+			}
+			.slideshow-indicator{
+				span{
+					width: 11px;
+				    height: 11px;
+				    border-radius: 50%;
+				    display: inline-block;
+				    margin-right: 7px;
+				    margin-top: 17px;
+				}
 			}
 
 			.design-type{
-				span:first-child{
-					font-size:17px;
+				color: #e53532;
+				font-weight: 600;
+				margin-top: 32px;;
+				span:first-child {
+					font-size: 14px;
+					margin-right: 4px;
 				}
-				font-size: 1.106vw;				
+				img {
+					width: 5%;
+					margin-bottom: 4px;
+				}
+			}
+
+		}
+	}
+	
+}
+
+@media only screen and (min-width: 600px) {
+	.slideshow-container {
+		border-bottom: 2px solid #f7f7f7;
+		padding-bottom: 64px;
+		.slide-show-wrapper {
+			.carousel-indicators {
+				display:none;
+			}
+			.mouse-pointer {
+				img {
+					display: none;
+				}
 			}
 		}
-		.mouse-pointer {
-			img {
-				width: 18%;
-				display:inline-block;
+
+		.studio-slide-caption {
+			margin-top: 18px;
+			padding-left: 17px;
+	    	padding-right: 17px;
+			p {
+				 font-family: Proxima Nova Rg;
+				 font-weight: normal;
+				 font-stretch: normal;
+				 font-style: normal;
+				 line-height: normal;
+				 letter-spacing: normal;
+				 color: #000000;
+				 text-align: left;
+				 margin-bottom: 0;
+				 font-weight: bold;
+				 opacity: 1;
+			}
+
+			>p:first-child {
+				font-size: 22px;
+				width: 9.3em;
+			}
+
+			p:nth-child(2) {
+				font-size: 13px;
+				margin-top: 5px;
+				font-weight: normal;
+				width: 19em;
+			}
+			.slideshow-indicator{
+				span{
+					width: 11px;
+				    height: 11px;
+				    border-radius: 50%;
+				    display: inline-block;
+				    margin-right: 7px;
+				    margin-top: 17px;
+				}
+			}
+
+			.design-type{
+				color: #e53532;
+				font-weight: 600;
+				margin-top: 32px;;
+				span:first-child {
+					font-size: 14px;
+					margin-right: 4px;
+				}
+				img {
+					width: 2%;
+					margin-bottom: 4px;
+				}
+			}
+
+		}
+	}
+	
+}
+
+@media only screen and (min-width: 768px) {
+	.slideshow-container {
+		.slide-show-wrapper {
+			.studio-slides {
+				.carousel-indicators {
+					left: -2.4%;
+		    		bottom: 3%;
+		    		display: flex;
+	    			justify-content: end;
+				}
+
+				li {
+					width: 10px;
+					height: 11px;
+				}
+			}
+			.studio-slide-caption {
+				left: 10.6%;
+				top: 26.8%;
+
+				p:first-child {
+					font-size: 3.645vw;
+				}
+
+				p:nth-child(2) {
+					font-size: 1.432vw;
+				}
+
+				.design-type{
+					span:first-child{
+						font-size:17px;
+					}
+					font-size: 1.106vw;	
+					img {
+						width: 3%;
+						margin-bottom: 4px;
+					}			
+				}
+			}
+			.mouse-pointer {
+				img {
+					width: 18%;
+					display:inline-block;
+				}
 			}
 		}
 	}
+	
 }
 
 @media only screen and (min-width: 992px) {
-	.slide-show-wrapper {
-		.studio-slides {
-			.carousel-indicators {
-				left: -2.7%;
-	    		bottom: 13%;
-			}
+	.slideshow-container {
+		.slide-show-wrapper {
+			.studio-slides {
+				.carousel-indicators {
+					left: -2.7%;
+		    		bottom: 13%;
+				}
 
-			li {
-				width: 11px;
-				height: 11px;
+				li {
+					width: 11px;
+					height: 11px;
+				}
 			}
-		}
-		.mouse-pointer {
-			img {
-		    	width: 21.8%;
-		    	display: block;
-		    }
+			.mouse-pointer {
+				img {
+			    	width: 21.8%;
+			    	display: block;
+			    }
+			}
 		}
 	}
 }
 
 @media only screen and (min-width: 1200px) {
-	.slide-show-wrapper {
-		.studio-slides {
-			.carousel-indicators {
-				left: -3.4%;
-	    		bottom: 18%;
+	.slideshow-container {
+		.slide-show-wrapper {
+			.studio-slides {
+				.carousel-indicators {
+					left: -3.4%;
+		    		bottom: 18%;
 
-	    		li {
-	    			width: 13px;
-		  			height: 15px;
-	    		}
+		    		li {
+		    			width: 13px;
+			  			height: 15px;
+		    		}
+				}
 			}
-		}
-		.mouse-pointer {
-			img {
-		    	width: 30.8%;
-		    	display: block;
-		    }
+			.mouse-pointer {
+				img {
+			    	width: 30.8%;
+			    	display: block;
+			    }
+			}
 		}
 	}
 }
