--- a/src/css/home/design-process.scss
+++ b/src/css/home/design-process.scss
@@ -111,6 +111,10 @@
 				font-size: 14px;
 				width: 80%;
 			}	
+		}		
+
+		.design-process-desc:first-child {
+			margin-bottom: 3em;
 		}
 		.design-process-img-details {
 			margin-top: 34px;
@@ -126,6 +130,10 @@
 				p:last-child {
 					margin-bottom: 0;
 				}			
+			}
+
+			.design-process-img-desc:nth-child(2) {
+				margin-bottom: 3em;
 			}
 		}
 	}
@@ -159,6 +167,10 @@
 					margin-bottom: 0;
 				}	
 			}
+
+			.design-process-img-desc:nth-child(2) {
+				margin-bottom: 3em;
+			}
 		}
 	}
 }
@@ -179,6 +191,10 @@
 				p {
 					font-size: 14px;
 				}
+			}
+
+			.design-process-img-desc:nth-child(2) {
+				margin-bottom: 0;
 			}
 		}
 	}
