--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -30,6 +30,7 @@
 @import './category/grid.scss';
 @import './category/app-media.scss';
 @import './category/app.scss';
+@import './category/slider.scss';
 
 html {
 	overflow-y: scroll;
