--- a/src/css/navigation-bar/navigation-footer.scss
+++ b/src/css/navigation-bar/navigation-footer.scss
@@ -11,7 +11,7 @@
 			figure {
 				margin-bottom: 0;
 				img {
-					width: 100%;
+					width: 23px;
 				}
 				.footer-caption {
 					font-family: Proxima Nova Rg;
