--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,5 +1,11 @@
 body {
-		margin-top: 3.2em;
+	margin-top: 3.2em;
+}
+
+@media only screen and (min-width: 768px) {
+	body {
+		background-color: #fafafa;
+	}
 }
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
