updated about us

--- a/src/css/home/design-process.scss
+++ b/src/css/home/design-process.scss
@@ -49,6 +49,9 @@
 		padding-left: 21px;
     	padding-right: 21px;
 		.design-process-img-desc {
+			img {
+				height: auto;
+			}
 			text-align: center;
 			p{
 				font-family: Proxima Nova Rg;
