--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -8,6 +8,10 @@ body {
 	}
 }
 
+a, a:hover, a:focus {
+  text-decoration: none;
+}
+
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {
 	body {
