--- a/src/css/category/about-us.scss
+++ b/src/css/category/about-us.scss
@@ -14,9 +14,8 @@
 .About-us-header {
   font-weight: normal;
   text-align: left;
-  position: fixed;
+  position: sticky;
   top: 60px;
-  width: inherit;
   color: #212121;
   font-size: 20px;
   line-height: 20px;
@@ -35,6 +34,10 @@
     top: 45px;
     left: 0;
   }
+
+  .About-us-page {
+    padding-top: 98px;
+  }
 }
 
 @media only screen and (min-width:600px){
@@ -42,12 +45,24 @@
     top: 46px;
     left: 0;
   }
+
+  .About-us-page {
+    padding-top: 98px;
+  }
 }
 
 @media only screen and (min-width:768px){
   .About-us-header {
-    top: 80px;
+    top: 100px;
     left: auto;
+  }
+
+  .About-us-page {
+    padding-top: 50px;
+  }
+
+  .rahul {
+    padding: 30px 20px !important;
   }
 }
 
@@ -55,6 +70,10 @@
   .About-us-header {
     top: 84px;
     left: auto;
+  }
+
+  .rahul {
+    padding: 30px 0px !important;
   }
 }
 
@@ -124,6 +143,10 @@
   text-transform: capitalize;
   cursor: pointer;
   margin: 10px 0px;
+}
+
+.rahul {
+  font-family: Proxima Nova Rg;
 }
 
 .About-us-page .rahul .subText {
@@ -226,9 +249,5 @@
   .About-us-container {
     width: 1140px;
     margin: 0px calc(50% - 570px);
-  }
-
-  .About-us-page {
-    padding-top: 98px;
   }
 }
