--- a/src/css/home/contact-us.scss
+++ b/src/css/home/contact-us.scss
@@ -4,7 +4,7 @@
 	.heading {
 		margin-top: 80px;
 		margin-bottom: 103px;
-		font-family: Proxima  Nova Rg;
+		font-family: Proxima Nova Rg;
 		font-size: 36px;
 		font-weight: bold;
 		font-stretch: normal;
@@ -54,6 +54,19 @@
 		img {
 			width:  34px;
 		}
+	}
+}
+
+.home-contents-overview .Contact-us {
+	background-color: #fafafa;
+	div:first-child {
+		text-align: center;
+	}
+}
+
+.Contact-us {
+	.drop-up {
+		font-family: Proxima Nova Rg;
 	}
 }
 
