--- a/src/css/home/home.scss
+++ b/src/css/home/home.scss
@@ -1,5 +1,5 @@
 .home-contents-overview {
-	background-color: #e0e0e0;
+	background-color: #fafafa;
 	.home-content-margin {
 		background-color: #f7f7f7;
 	}
@@ -7,12 +7,12 @@
 		background-color: #fff;
 	}
 	@media only screen and (max-width: 600px){
-		background-color: #fff;
+		background-color: #fafafa;
 	}
 	@media only screen and (min-width: 600px){
-		background-color: #fff;
+		background-color: #fafafa;
 	}
 	@media only screen and (min-width:768px) {
-		background-color: #e0e0e0;
+		background-color: #fafafa;
 	}
 }
