--- a/src/css/navigation-bar/navigation.scss
+++ b/src/css/navigation-bar/navigation.scss
@@ -35,7 +35,10 @@
 		    text-decoration: none;
 		    padding-right: 4.379vw;
 		}
-		
+
+		.activeNav {
+			color: red;
+		}
 	}
 
 	.contact-us-dropdown > a.navlink {
