--- a/src/css/home/feature.scss
+++ b/src/css/home/feature.scss
@@ -14,6 +14,9 @@
 	}
 
 	.feature-list {
+		figure > img {
+			width: 90%;
+		}
 		.feature-image-caption {
 			p {	
 				font-family: Proxima Nova Rg;
