--- a/src/css/home/curated-product.scss
+++ b/src/css/home/curated-product.scss
@@ -151,6 +151,18 @@
 			.curated-figure {
 				box-shadow: none;
 				border-radius: 0;
+				div {
+					overflow: hidden;
+    				cursor: pointer;
+				}
+				div img {
+					display: inline-block;
+					transition: all 0.4s;
+					margin-bottom: 0;
+				}
+				div:hover img {
+					transform: scale(1.1);
+				}
 				.curated-image-caption {
 					font-size: 14px;
 				}
@@ -173,6 +185,7 @@
 			.curated-figure {
 				box-shadow: none;
 				border-radius: 0;
+
 				.curated-image-caption {
 					font-size: 17px;
 					margin-top: 13px;
