--- a/src/css/home/work-area.scss
+++ b/src/css/home/work-area.scss
@@ -171,7 +171,20 @@
 			.work-area-image {
 			    box-shadow: none;
 			    border-radius:auto;
+			    div {
+					overflow: hidden;
+    				cursor: pointer;
+				}
+				div img {
+					display: inline-block;
+					transition: all 0.4s;
+					margin-bottom: 0;
+				}
+				div:hover img {
+					transform: scale(1.1);
+				}
 				.work-area-image-caption{
+					margin-top: .5rem;
 				   width:100%;
 
 				  p{
