--- a/src/css/home/blog.scss
+++ b/src/css/home/blog.scss
@@ -156,6 +156,18 @@
 			.blog-list{
 				.blog-image {
 					box-shadow: none;
+					div {
+						overflow: hidden;
+	    				cursor: pointer;
+					}
+					div img {
+						display: inline-block;
+						transition: all 0.4s;
+						margin-bottom: 0;
+					}
+					div:hover img {
+						transform: scale(1.1);
+					}
 					.blog-image-caption{
 						padding: 0;
 						p:first-child{
