--- a/src/css/navigation-bar/navigation.scss
+++ b/src/css/navigation-bar/navigation.scss
@@ -25,7 +25,7 @@
 		a, a.nav-link {
 			object-fit: contain;
 		  	font-family: Proxima Nova Lt;
-		  	font-size: 19px;
+		  	font-size: 17px;
 		  	font-weight: 600;
 		    font-stretch: normal;
 		 	font-style: normal;
@@ -65,7 +65,7 @@
 		background-repeat: no-repeat;
 	    background-size: 0.7em;
 	    border: none;
-	    padding: 1.1px 15px 7px 0;
+	    padding: 2.1px 11px 5px 9px;
 	    background-position-x: 100%;
 	}
 
