--- a/src/css/home/feature.scss
+++ b/src/css/home/feature.scss
@@ -1,5 +1,7 @@
 .feature-wrapper {
 	margin-top: 64px;
+	border-bottom: 2px solid #f7f7f7;
+	padding-bottom: 48px;
 	.feature-heading {
 		font-family: Proxima Nova Rg;
 	    font-size: 36px;
