--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -12,6 +12,7 @@
 @import './home/testimonals.scss';
 @import './home/feature.scss';
 @import './home/contact-us.scss';
+@import './home/story.scss';
 
 @import './blog/blog.scss';
 
