--- a/src/css/navigation-bar/navigation-footer.scss
+++ b/src/css/navigation-bar/navigation-footer.scss
@@ -16,6 +16,7 @@
 				background-image: url('../../images/nav-bar-footer/home.png');
 			}
 			.shop {
+				margin-left: 2px;
 				background-image: url('../../images/nav-bar-footer/work.png');
 			}
 			.projects {
