--- a/src/css/navigation-bar/navigation-header.scss
+++ b/src/css/navigation-bar/navigation-header.scss
@@ -1,5 +1,5 @@
 .studio-navheader-wrapper {
-	background-color: #f6f6f6;
+	background-color: #fff;
 	box-shadow: 2px 2px 4px 0 rgba(0, 0, 0, 0.22);
 
 	.image-links-list{
